[metadata]
name = vassapi
author = Vadim Titov
author_email = titov.hse@gmail.com
description = Voice Assistant Python client
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/voice-assistant-org/voice-assistant-client
project_urls =
    Bug Tracker = https://github.com/voice-assistant-org/voice-assistant-client/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Topic :: Home Automation

[options]
package_dir=
    =src
packages = find:
python_requires = >=3.7
install_requires =
    requests >= 2.26.0, < 3

[options.packages.find]
where=src

[options.extras_require]
test = pytest

[coverage:run]
branch = true
parallel = true

[coverage:report]
skip_covered = true
show_missing = true
sort = Cover
